--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -1,6 +1,23 @@
 body{
     background-image:url("../IconosMusic/fondo6.jpg");    
    color: #FFF;
+   background-attachment: scroll;
+   background-repeat: no-repeat;       
+}
+
+header p{
+    text-align: center;    
+    color:#FFF;   
+    font-family: "Miso Light";
+    font-size: 130px;
+    font-weight: bolder;    
+    width: 1000px;
+    height: 130px;
+    margin: 0 auto;
+     border-bottom-color: #FFF; 
+    border-top-color: #FFF;
+    border-bottom-style: solid;
+    border-top-style: solid;    
 }
 
 footer{
@@ -16,8 +33,40 @@ footer img{
 }
 
 section{
-    font-family: "Century Gothic";
+    font-family: "Arial Rounded MT Bold";
     text-align: center;
     font-size: 50px;
+    font-weight: bolder;
 }
 
+#acepta{
+    width: 270px;
+    height: 70px;
+    text-align: center;
+    color: #000;
+    font-family: "Arial Rounded MT Bold";
+    font-size: xx-large;
+    font-weight: bolder;
+    border: none;
+    border-radius: 15px;
+    background: #FEA813;
+}
+
+/*Fuente Miso Light*/
+@font-face {
+    font-family:"Miso Light";
+    src:url("miso-light.eot?") 
+   format("eot"),url("miso-light.woff") 
+   format("woff"),url("miso-light.ttf") 
+   format("truetype"),url("miso-light.svg#Miso-Light") 
+   format("svg");
+    font-weight:normal;
+    font-style:normal;
+}
+/*Arial Rounded*/
+@font-face {
+font-family: 'Arial Rounded MT Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Arial Rounded MT Bold'), url('ARLRDBD_0.woff') format('woff');
+}
