--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -3,7 +3,7 @@
     padding: 0 auto;
     width: 1366px;
     height: 900px;       
-   background-image:url("../IconosMusic/fondo6.jpg");    
+   background-image:url("../IconosMusic/fondo6.jpeg");    
    color: #FFF; 
    background-repeat: no-repeat;       
 }
