--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -1,3 +1,21 @@
+#encabezado{
+    background: #242426;    
+    width: auto;
+    height: 100px;
+    margin: 0 auto;
+}
+
+#encabezado p{
+    text-align: left;    
+    color:#FFF;   
+    font-family: "Miso Light";
+    font-size: 30px;
+    font-weight: bolder;    
+    width: 200px;
+    height: 30px;
+    margin: 0 auto;    
+}
+
 #Contenedor{
     margin: 0 auto;
     padding: 0 auto;
