--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -1,19 +1,20 @@
+body{
+     background: #000;    
+}
+
+#contenedorlogin{
+     margin: 0 auto;
+    padding: 0 auto;
+    width: 1366px;
+    height: 900px;       
+}
+
 #encabezado{
     background: #242426;    
     width: auto;
-    height: 100px;
-    margin: 0 auto;
-}
-
-#encabezado p{
-    text-align: left;    
-    color:#FFF;   
-    font-family: "Miso Light";
-    font-size: 30px;
-    font-weight: bolder;    
-    width: 200px;
-    height: 30px;
-    margin: 0 auto;    
+    height: 150px; 
+    display: block;
+    text-align: left;
 }
 
 #Contenedor{
@@ -39,6 +40,17 @@ header p{
     border-top-color: #FFF;
     border-bottom-style: solid;
     border-top-style: solid;    
+}
+
+#logito{
+    text-align: left;    
+    color:#FFF;   
+    font-family: "Miso Light";
+    font-size: 40px;
+    font-weight: bolder;    
+    width: 300px;
+    height: 50px;
+    margin: 0 auto;
 }
 
 footer{
