--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -9,6 +9,15 @@ body{
     height: 900px;       
 }
 
+.user{
+    color: #226FDB;
+    font-family: "Miso Light";
+    font-weight: 900;
+}
+#fondo{
+    background: #FFF;
+}
+
 #encabezado{
     background: #242426;    
     width: auto;
@@ -33,7 +42,7 @@ header p{
     font-family: "Miso Light";
     font-size: 130px;
     font-weight: bolder;    
-    width: 1000px;
+    width: 800px;
     height: 130px;
     margin: 0 auto;
      border-bottom-color: #FFF; 
@@ -44,13 +53,14 @@ header p{
 
 #logito{
     text-align: left;    
-    color:#FFF;   
+    color:#000;   
     font-family: "Miso Light";
     font-size: 40px;
     font-weight: bolder;    
     width: 300px;
     height: 50px;
     margin: 0 auto;
+    
 }
 
 footer{
