--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -1,7 +1,3 @@
-body{
-     background: #000;    
-}
-
 #contenedorlogin{
      margin: 0 auto;
     padding: 0 auto;
@@ -9,10 +5,22 @@ body{
     height: 900px;       
 }
 
+#logoimg{
+    width: 150px;
+    height: auto;
+}
+
+#bocina{
+      width: 50px;
+      height: auto;
+}
 .user{
     color: #226FDB;
     font-family: "Miso Light";
     font-weight: 900;
+    text-align: left;
+    position: relative;
+    left: 400px;
 }
 #fondo{
     background: #FFF;
@@ -21,11 +29,9 @@ body{
 #encabezado{
     background: #242426;    
     width: auto;
-    height: 150px; 
-    display: block;
+    height: 100px;     
     text-align: left;
 }
-
 #Contenedor{
     margin: 0 auto;
     padding: 0 auto;
@@ -52,14 +58,26 @@ header p{
 }
 
 #logito{
-    text-align: left;    
+    text-align: center;    
     color:#000;   
     font-family: "Miso Light";
-    font-size: 40px;
+    font-size: 80px;
     font-weight: bolder;    
-    width: 300px;
-    height: 50px;
+    width: 600px;
+    height: 90px;
     margin: 0 auto;
+    border-bottom-color: #000; 
+    border-top-color: #000;
+    border-bottom-style: solid;
+    border-top-style: solid;       
+}
+
+#usuario,#pass{    
+    background: #E8DCE8;        
+    width: 300px;
+    height: 100px;        
+    border-style: none;
+    border-radius: 15px;
     
 }
 
