--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -116,13 +116,19 @@ section{
 .encabezadoR{
     background-color: #242426;
     font-family: "Miso Light";
+    font-size: 20px;
+    font-weight: bolder; 
 }
 .formularioR{
     color: #000;
     text-align: center;
+    font-family: "Miso Light";
+    font-weight: bolder; 
 }
 .labelR{
     text-align: right;
+    font-family: "Miso Light";
+    font-weight: bolder;     
 }
 #encabezadoRegistro{
     margin: auto;
