--- a/FeeltheMusic/web/css/estilos.css
+++ b/FeeltheMusic/web/css/estilos.css
@@ -15,7 +15,7 @@ body{
     height: auto;
 }
 
-#bocina{
+.bocina{
       width: 50px;
       height: auto;
       position: relative;
@@ -139,6 +139,17 @@ header p{
     border-radius: 15px;
     position: relative;        
     top:-15px;
+}
+
+input{
+    background: #E8DCE8;        
+    width: 300px;
+    height: 65px;        
+    border-style: none;
+    border-radius: 15px;
+    position: relative;  
+    left: 60px;
+    top: -10px;
 }
 
 footer{
